<resources>
    <string-array name="color_array">
        <item>BLAU</item>
        <item>VERMELL</item>
        <item>TARONJA</item>
        <item>GROC</item>
        <item>LILA</item>
        <item>GRIS</item>
        <item>ROSA</item>
        <item>VERD</item>
        <item>CIAN</item>
        <item>MARRÓ</item>
        <item>BLANC</item>
        <item>NEGRE</item>
    </string-array>
    <string-array name="color_array_esp">
        <item>AZUL</item>
        <item>ROJO</item>
        <item>NARANJA</item>
        <item>AMARILLO</item>
        <item>LILA</item>
        <item>GRIS</item>
        <item>ROSA</item>
        <item>VERDE</item>
        <item>CIAN</item>
        <item>MARRÓN</item>
        <item>BLANCO</item>
        <item>NEGRO</item>
    </string-array>
    <string-array name="color_array_eng">
        <item>BLUE</item>
        <item>RED</item>
        <item>ORANGE</item>
        <item>YELLOW</item>
        <item>PURPLE</item>
        <item>GREY</item>
        <item>PINK</item>
        <item>GREEN</item>
        <item>CYAN</item>
        <item>BROWN</item>
        <item>WHITE</item>
        <item>BLACK</item>
    </string-array>

    <string name="purple">#FFBB86FC</string>
    <string name="black">#000000</string>
    <string name="red">#FF0000</string>
    <string name="blue">#0035F4</string>
    <string name="yellow">#DFF800</string>
    <string name="green">#41F300</string>
    <string name="white">#FFFFFFFF</string>
    <string name="pink">#D65380</string>
    <string name="grey">#686868</string>
    <string name="cyan">#00BCD4</string>
    <string name="brown">#77654B</string>
    <string name="menu_orange">#F89501</string>

    
    <string name="app_name">Leave with all</string>
    <!-- Strings related to login -->
    <string name="title">LEAVE WITH ALL</string>
    <string name="login">LOGIN</string>
    <string name="user_name">Nom d\'usuari</string>
    <string name="username_prompt">Escriu el nom d\'usuari</string>
    <string name="password">Contrasenya</string>
    <string name="prompt_password">Escriu la contrassenya</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="marta_button">Marta</string>
    <string name="mario_button">Mario</string>
    <string name="silvia_button">Silvia</string>
    <string name="laia_button">Laia</string>
    <string name="help_comment">En cas de tenir problemes, contacteu amb <b>help@mail.com</b></string>
    <string name="hire_comment">Encara no disposa dels nostres serveis? Contracta\'ns! <b>leavewithall@mail.com</b></string>

    <!-- Strings related to menu -->
    <string name="item">telèfon</string>
    <string name="item1">cartera</string>
    <string name="button_item_delete">Eliminar</string>
    <string name="button_item_edit">Editar</string>
    <string name="button_item_add">Afegir</string>

    <!-- Strings related to add,edit,delete -->
    <string name="title_add">AFEGIR DISPOSITIU</string>
    <string name="devices">DISPOSITIUS</string>
    <string name="description">Acosti el dispositiu al lector, fins que s’encengui la llum verda</string>
    <string name="button_add">AFEGIR</string>
    <string name="button_adduser">AFEGIR NOU USUARI</string>
    <string name="exit_button">SORTIR</string>
    <string name="back_button">TORNAR</string>
    <string name="title_delete">ELIMINAR DISPOSITIU</string>
    <string name="button_delete">ELIMINAR</string>
    <string name="input">Canvi el nom del dispositiu</string>
    <string name="new_device_name">Nom del nou dispositiu</string>
    <string name="title_edit">EDITAR DISPOSITIU</string>
    <string name="button_edit">EDITAR</string>


    <!-- Strings related to configuration -->
    <string name="title_configuration">CONFIGURACIÓ</string>
    <string name="change_name">CANVIAR NOM</string>
    <string name="add_user">CREAR PERFIL</string>
    <string name="account">CANVIAR CONTRASENYA</string>
    <string name="user">TRIAR USUARI</string>
    <string name="help">AJUDA</string>

    <string name="si">SI</string>
    <string name="cancelar">Cancel·lar</string>

    <!-- Strings related to add user, edit account and edit profile -->
    <string name="new_user">Nou usuari</string>
    <string name="old_password">Contrasenya actual</string>
    <string name="new_password">Nova contrasenya</string>
    <string name="current_password">Contrasenya actual</string>
    <string name="color">Color</string>
    <string name="name">Nom</string>
    <string name="name_prompt">Nova contrasenya</string>
    <string name="name_user">Nom usuari</string>
    <string name="current_name_user">Nom usuari actual</string>
    <string name="new_name_user">Nou nom usuari</string>
    <string-array name="colors_array">
        <item>Selecciona un color</item>
        <item>Verd</item>
        <item>Vermell</item>
        <item>Blau</item>
        <item>Lila</item>
        <item>Marró</item>
        <item>Taronja</item>
        <item>Groc</item>
        <item>Rosa</item>
        <item>Blanc</item>
        <item>Negre</item>
        <item>Gris</item>
    </string-array>


    <!-- Strings related to help -->
    <string name="title_help">AJUDA</string>
    <string name="text_help">Si necessites ajuda amb l’aplicació o el desenvolupament de l’activitat del producte, no dubtis a contactar amb nosaltres trucant al
<b>+34 696 634 466</b>
o escrivint un correu electronic a
<b>help@mail.com</b>.
T’atendrem el més aviat possible.</string>
    <string name="m_bil">Telèfon</string>
    <string name="prompt_email">hola@hola.com</string>


</resources>