<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/darkblue"
    tools:context=".ui.login.LoginActivity">


    <ImageButton
        android:id="@+id/BotonCatala"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:layout_marginLeft="170dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_catala"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:id="@+id/BotonEspañol"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:layout_marginLeft="240dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_españa"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:id="@+id/BotonIngles"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:layout_marginLeft="310dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_inglesa"
        android:layout_marginTop="20dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="135dp" />

    <View
        android:layout_width="365dp"
        android:layout_height="1dip"
        android:layout_marginEnd="0dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="199dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="240dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="286dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:background="@drawable/rectangle_login_textedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="360dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@drawable/rectangle_login_textedit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="240dp"
        android:layout_height="71dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:layout_marginBottom="176dp"
        android:width="340dp"
        android:height="100dp"
        android:backgroundTint="@color/button_dark_grey"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:ignore="SmallSp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"

        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_comment"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>