<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseuser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.chooseuser.ChooseUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/darkblue"
        android:textSize="40sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="135dp" />

    <View
        android:layout_width="365dp"
        android:layout_height="1dip"
        android:layout_marginEnd="0dp"
        android:background="@color/darkblue"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="199dp" />

    <Button
        android:id="@+id/martaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="490dp"
        android:enabled="true"
        android:text="@string/marta_button"
        android:width="300dp"
        android:height="100dp"
        android:backgroundTint="@color/menu_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/marioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="350dp"
        android:enabled="true"
        android:text="@string/mario_button"
        android:width="300dp"
        android:height="100dp"
        android:backgroundTint="@color/menu_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/laiaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="210dp"
        android:enabled="true"
        android:text="@string/laia_button"
        android:width="300dp"
        android:height="100dp"
        android:backgroundTint="@color/menu_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/silviaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        android:enabled="true"
        android:text="@string/silvia_button"
        android:width="300dp"
        android:height="100dp"
        android:backgroundTint="@color/menu_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>
