<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">


    <ImageButton
        android:id="@+id/BotonCatala"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="20dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/img_catala"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/BotonEspañol"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="20dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/img_spain"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/BotonIngles"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:layout_marginLeft="310dp"
        android:layout_marginTop="20dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:src="@drawable/img_inglesa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:text="@string/account"
        android:textColor="@color/white"
        android:layout_width="420dp"
        android:layout_height="124dp"
        android:gravity="center"
        android:fontFamily="@font/futura_heavy"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="534dp" />

    <View
        android:layout_width="365dp"
        android:layout_height="1dip"
        android:layout_marginEnd="0dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="564dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="504dp"
        android:fontFamily="@font/futura_medium"
        android:gravity="start"
        android:text="@string/new_user_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/rectangle_login_textedit"
        android:fontFamily="@font/futura_light"
        android:hint="@string/username_prompt"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="292dp"
        android:fontFamily="@font/futura_medium"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rectangle_login_textedit"
        android:fontFamily="@font/futura_light"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="192dp"
        android:width="340dp"
        android:height="100dp"
        android:backgroundTint="@color/button_green"
        android:enabled="false"
        android:fontFamily="@font/futura_medium"
        android:text="@string/current_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/rectangle_login_textedit"
        android:fontFamily="@font/futura_light"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/editAccountButton"
        android:layout_width="240dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_marginBottom="92dp"
        android:width="340dp"
        android:height="100dp"
        android:backgroundTint="@color/button_green"
        android:enabled="false"
        android:fontFamily="@font/futura_heavy"
        android:text="@string/button_edit"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="240dp"
        android:layout_height="71dp"
        android:layout_gravity="start"
        android:layout_marginBottom="4dp"
        android:width="340dp"
        android:height="100dp"
        android:backgroundTint="@color/button_dark_grey"
        android:enabled="false"
        android:fontFamily="@font/futura_heavy"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>