<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseuser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/img_wallpaper"
    tools:context=".ui.chooseuser.ChooseUserActivity">



    <ImageButton
        android:id="@+id/BotonCatala"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:layout_marginLeft="170dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_catala"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:id="@+id/BotonEspañol"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:layout_marginLeft="240dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_spain"
        android:layout_marginTop="20dp" />

    <ImageButton
        android:id="@+id/BotonIngles"
        android:layout_width="50dp"
        android:layout_height="34dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        android:layout_marginLeft="310dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_inglesa"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_configuration"
        android:textColor="@color/darkblue"
        android:textSize="40sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="135dp" />

    <View
        android:layout_width="365dp"
        android:layout_height="1dip"
        android:layout_marginEnd="0dp"
        android:background="@color/darkblue"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="199dp" />

    <Button
        android:id="@+id/changeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="530dp"
        android:enabled="true"
        android:text="@string/change_name"
        android:textSize="25dp"
        android:width="300dp"
        android:height="80dp"
        android:backgroundTint="@color/darkblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />


    <Button
        android:id="@+id/addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="440dp"
        android:enabled="true"
        android:text="@string/add_user"
        android:textSize="25dp"
        android:width="300dp"
        android:height="80dp"
        android:backgroundTint="@color/darkblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="350dp"
        android:enabled="true"
        android:text="@string/account"
        android:textSize="25dp"
        android:width="300dp"
        android:height="80dp"
        android:backgroundTint="@color/darkblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="260dp"
        android:enabled="true"
        android:text="@string/help"
        android:textSize="25dp"
        android:width="300dp"
        android:height="80dp"
        android:backgroundTint="@color/surface_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/sortir2"
        android:layout_width="240dp"
        android:layout_height="71dp"
        android:layout_gravity="start"
        android:layout_marginBottom="36dp"
        android:width="340dp"
        android:height="100dp"
        android:backgroundTint="@color/button_dark_grey"
        android:enabled="true"
        android:text="@string/back_button"
        android:textSize="36sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>